correcting the navbar links

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         </div>
         <div class="col-md-6 d-flex flex-column align-items-center justify-content-center">
             <h3 class="fw-bold">Video and Photo Editing</h3>
-        <p data-aos="fade" data-aos-delay="100">We are expert in building with Shopify for your E-commerce and dropshipping websites. your dedicated partner in turning visual concepts into captivating masterpieces. As specialists in video and photo editing, we bring creativity, technical expertise, and a keen eye for detail to every project, ensuring that your visual content stands out in a crowded digital landscape.</p>
+        <p data-aos="fade" data-aos-delay="100">We are your dedicated partner in turning visual concepts into captivating masterpieces. As specialists in video and photo editing, we bring creativity, technical expertise, and a keen eye for detail to every project, ensuring that your visual content stands out in a crowded digital landscape.</p>
    
         </div>
         </div>
