--- a/contact.html
+++ b/contact.html
@@ -41,13 +41,13 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Courses</a></li>
+          <li><a href="services.html">Services</a></li>
           <li><a href="blog.html">Blog</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="courses.html" class="get-started-btn">Get Started</a>
+      <a href="contact.html" class="get-started-btn">Get Started</a>
 
     </div>
   </header><!-- End Header -->
