--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-      <a href="courses.html" class="get-started-btn">Get Started</a>
+      <a href="contact.html" class="get-started-btn">Get Started</a>
 
     </div>
   </header><!-- End Header -->
