--- a/index.html
+++ b/index.html
@@ -302,14 +302,14 @@
         &copy; Copyright <strong><span>Mykel</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="#">Mykel</a>
+        Designed by <a href="https://mykel-resume.onrender.com/" target="_blank">Mykel</a>
       </div>
     </div>
     <div class="social-links text-center text-md-right pt-3 pt-md-0">
       <a href="https://www.facebook.com/profile.php?id=61552120619708" class="facebook"><i class="bx bxl-facebook"></i></a>
       <a href="https://www.linkedin.com/in/micheal-olowookere/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       <a href="https://twitter.com/Mykel_68">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><rect x="0" y="0" width="24" height="24" fill="none" stroke="none" /><path fill="currentColor" d="M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584l-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932ZM17.61 20.644h2.039L6.486 3.24H4.298Z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24"><rect x="0" y="0" width="24" height="24" fill="none" stroke="none" /><path fill="currentColor" d="M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584l-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932ZM17.61 20.644h2.039L6.486 3.24H4.298Z"/></svg>
       </a>
     </div>
   </div>
